--- a/minha-lista-back/src/main/resources/application.properties
+++ b/minha-lista-back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/minhalista
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1020304050
 
 spring.jpa.hibernate.ddl-auto=none
 
