--- a/minha-lista-back/src/main/resources/application.properties
+++ b/minha-lista-back/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/minhalista
 spring.datasource.username=root
-spring.datasource.password=1020304050
+spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
